--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <a href="">Sobre Nosotros</a>
         <a href="">Contacto</a>
       </nav>
+      <nav>
+        <a href="">Iniciar Sesion</a>
+        <a href="">Registrarse</a>
+      </nav>
     </header>
   </body>
 </html>
